完成播放搜索的功能

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
         <item>订阅</item>
         <item>历史</item>
     </string-array>
+    <string name="play_mode_order_text">顺序播放</string>
+    <string name="play_mode_random_text">随机播放</string>
+    <string name="play_mode_list_play_text">列表循环</string>
+    <string name="play_mode_single_play_text">单曲播放</string>
+
+    <string name="pause_tips_text">已暂停</string>
+    <string name="click_play_tips_text">点击播放</string>
+    <string name="listener_as_you_like">随便听听</string>
 </resources>
