--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,11 @@
     <string name="pause_tips_text">已暂停</string>
     <string name="click_play_tips_text">点击播放</string>
     <string name="listener_as_you_like">随便听听</string>
+
+    <string name="cancel_sub_tips_text">取消订阅</string>
+    <string name="sub_tips_text">+ 订阅</string>
+    <string name="cancel_sub_success">取消订阅成功</string>
+    <string name="cancel_sub_failed">取消订阅失败</string>
+    <string name="no_sub_content_tips_text">没有订阅内容，赶紧去订阅吧！</string>
+    <string name="search_no_content_tips_text">没有相关内容，请别强行进行搜索！</string>
 </resources>
